--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-markdown-plus",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "homepage": "https://github.com/yjukaku/angular-markdown-plus",
   "authors": [
     "Yousuf Jukaku"
@@ -23,7 +23,7 @@
     "Editor",
     "Preview"
   ],
-  "license": "Apache 2.0",
+  "license": "MIT License",
   "ignore": [
     "**/.*",
     "node_modules",
